--- a/Week_2_Assignment/todo-app/index.html
+++ b/Week_2_Assignment/todo-app/index.html
@@ -34,15 +34,7 @@
           />
           <img class="adder" src="src\plus.png" />
         </div>
-        <div class="todo" id="tasklist">
-          <!-- <div class="addedtask">
-            <img src="src\circle.png" />
-            <input type="addtask" id="addtask" class="totask" placeholder="" />
-            <img src="src\minus-button.png" />
-            <img src="src\check.png" />
-            <img src="src\delete.png" />
-          </div> -->
-        </div>
+        <div class="todo" id="tasklist"></div>
         <div class="footer">
           <div id="updation">0 tasks left</div>
           <div class="footer-funcs">
